# backend

./: .editorconfig  .env  .gitignore  data.json  main.py  pyproject.toml  setup_crypto_db.py
app/: __init__.py  dependencies.py  utils.py
app/routers/: users.py
app/routers/v1/: __init__.py  crypto.py  dapp.py  users.py
dapp/: contract.py  ganache.py  package.json  pnpm-lock.yaml
dapp/contracts/: SpaceExchange.sol
sql_app/: database.py  model.py
